--- a/day-04/css/style.css
+++ b/day-04/css/style.css
@@ -1,31 +1,56 @@
-.intro {
+*,*:before, *:after {
+    box-sizing: border-box;
+}
 
+.intro {
+    display: flex;
+    background: green;
 }
 
 header {
-
+    flex: 1;
+    width: 250px;
+    background: yellow;
+    margin: 1em;
+    padding: 1em;
+    border: 5px solid blue;
+    display: inline-block;
 }
 
 .summary {
-
+    flex: 1;
+    width: 250px;
+    display: inline-block;
 }
 
 .preamble {
-
+    min-width: 300px;
+    max-width: 500px;
 }
 
 .sidebar {
+    position: fixed;
+    right: 10px;
+    top: 10px;
+    max-width: 250px;
+    background: chartreuse;
+    padding: 1em;
+}
 
+.page-wrapper {
+    margin-right: 260px;
 }
 
 #zen-supporting {
-
+    display: flex;
+    
 }
 
-.explanation, .particpation, .benefits, .requirements {
-
+.explanation, .participation, .benefits, .requirements {
+    flex: 2;
+    flex-basis: 300px;
 }
 
 footer {
-
+    flex-basis: 10px;
 }
